# qualcomm-CDI-generator

./: 10-qualcomm-cdi-generator.preset  CONTRIBUTING.md  README.md  SECURITY.md  meson.build  qualcomm-cdi-generator.py  qualcomm-cdi-generator.service
.github/ISSUE_TEMPLATE/: bug_report.md
